# codetool-lab-sonnet5

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  merge-on-green.yml  release.yml
control/: inbox.md  status.md
docs/: _merge_verification_2026-07-15.md
docs/audits/: 2026-07-13-fleet-cleanup-audit.md
docs/retro/: QUESTIONS.md  ping-ack.md  project-review-2026-07-09.md  self-review-2026-07-09.md  winddown-review-2026-07-09.md
docs/succession/: ENVIRONMENT.md  GEN2-FEEDBACK.md  NEXT-BOOT.md  PROPOSED-CUSTOM-INSTRUCTIONS.md  README.md  setup-universal.sh
src/cfgdiff/: __init__.py  cli.py  convert.py  diff.py  errors.py
src/cfgdiff/parsers/: __init__.py  env_parser.py  ini_parser.py  json_parser.py  toml_parser.py  yaml_parser.py
tests/: conftest.py  test_cli.py  test_convert.py  test_cross_format.py  test_diff.py  test_dotenv_differential.py  test_parsers.py
