[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfgdiff"
version = "0.1.0"
description = "Semantic config diff/convert across JSON, YAML, TOML, INI, and .env files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "the codetool-lab-sonnet5 contributors" }]
keywords = ["config", "diff", "convert", "yaml", "toml", "json", "ini", "dotenv", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = [
  "PyYAML>=6.0",
  "tomli>=2.0; python_version < '3.11'",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "build>=1.0"]

[project.urls]
Homepage = "https://github.com/menno420/codetool-lab-sonnet5"
Repository = "https://github.com/menno420/codetool-lab-sonnet5"
Changelog = "https://github.com/menno420/codetool-lab-sonnet5/blob/main/CHANGELOG.md"

[project.scripts]
cfgdiff = "cfgdiff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cfgdiff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
